--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  
   "dependencies": {
+    "body-parse": "^0.1.0",
+    "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.6",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
